--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_songs">Songs</string>
     <string name="title_albums">Albums</string>
     <string name="title_artists">Artists</string>
+    <string name="amount_of_songs"> %1$s Songs</string>
 </resources>
