--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_albums">Albums</string>
     <string name="title_artists">Artists</string>
     <string name="amount_of_songs"> %1$s Songs</string>
+    <string name="amount_of_albums"> %1$s Albums</string>
 </resources>
