--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="action_next">NEXT</string>
     <string name="action_pause">PAUSE</string>
     <string name="song_start_time">00:00</string>
+    <string name="bluetooth_connection">Bluetooth connection</string>
 </resources>
