--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,10 @@
     <string name="action_pause">PAUSE</string>
     <string name="song_start_time">00:00</string>
     <string name="bluetooth_connection">Bluetooth connection</string>
+    <string name="saved_devices">Saved devices:</string>
+    <string name="available_devices">Available devices:</string>
+    <string name="no_available_devices">No available devices!</string>
+    <string name="bluetooth_pair_text">Pair</string>
+    <string name="bluetooth_unpair_text">Unpair</string>
+    <string name="bluetooth_pairing_text">Pairing...</string>
 </resources>
